<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_speech"
            android:enabled="true"
            android:icon="@drawable/ic_mic_none"
            android:title="@string/speech"/>
        <item
            android:id="@+id/nav_say"
            android:icon="@drawable/ic_speaker_background"
            android:title="@string/say_it" />
        <item
            android:id="@+id/nav_learned"
            android:icon="@drawable/ic_learned"
            android:title="@string/Learned" />
    </group>
    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:enabled="true"
                android:icon="@drawable/ic_share_24"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_send_24"
                android:title="@string/send" />

        </menu>
    </item>
</menu>