<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <EditText
            android:id="@+id/tvText"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:background="#FBF6F6"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:paddingStart="10dp"
            android:paddingEnd="5dp"
            android:paddingBottom="50dp"
            android:textSize="18sp"


            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btnSaySpeech"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnSaySpeech"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/ic_speaker_foreground"
            android:contentDescription="@string/say_it"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvText"
            app:layout_constraintVertical_bias="0.914" />

        <ImageButton
            android:id="@+id/btnSpeak"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/ic_mic_none"
            android:contentDescription="@string/speech"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnDelSpeech"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toEndOf="@+id/btnSaySpeech"
            app:layout_constraintTop_toBottomOf="@+id/tvText"
            app:layout_constraintVertical_bias="1.0" />

        <ImageButton
            android:id="@+id/btnDelSpeech"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/ic_delete_foreground"
            android:contentDescription="@string/delete_it"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvText"
            app:layout_constraintVertical_bias="0.94" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>